--- a/package.json
+++ b/package.json
@@ -14,19 +14,27 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^2.9.4",
     "connected-react-router": "^6.9.1",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.12.0",
+    "dayjs": "^1.11.13",
+    "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.0.0",
     "moment": "^2.29.4",
     "node-sass": "^6.0.0",
+    "qr-scanner": "^1.4.2",
+    "qrcode-reader": "^1.0.4",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
+    "react-chartjs-2": "^2.11.1",
     "react-custom-scrollbars": "^4.2.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-icons": "^5.3.0",
@@ -37,6 +45,7 @@
     "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
