--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
 PORT=3000
 NODE_ENV=development
 REACT_APP_BACKEND_URL=http://localhost:5000
+REACT_APP_GOOGLE_CLIENT_ID=950935021307-9d3kbho7hcjbcn0ige4jpcmhp51crllt.apps.googleusercontent.com
 
 #The base URL for all locations. If your app is served from a sub-directory on your server, you'll want to set
 #this to the sub-directory. A properly formatted basename should have a leading slash, but no trailing slash.
 REACT_APP_ROUTER_BASE_NAME=
+
+# vao login dự án
+#http://localhost:3000/login 
+
+#admin: admin@example.com
+# pwd: password123
+# staff: staff1@example.com
+# pwd: password123
