--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^2.9.4",
@@ -37,6 +38,7 @@
     "react-datepicker": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-google-login": "^5.2.2",
     "react-icons": "^5.3.0",
     "react-image-lightbox": "^5.1.4",
     "react-intl": "^5.20.2",
